--- a/src/app/components/example-transform/example-transform/example-transform.component.html
+++ b/src/app/components/example-transform/example-transform/example-transform.component.html
@@ -1,5 +1,4 @@
 <div class="form-div" >
-<label for="name">Your Band Data</label>
 <br>
 <h1>{{inputBandData}} </h1>
 
@@ -7,7 +6,7 @@
 </div>
 
 @if (transFormedBandData) {
-<label for="name">Transform Band Data</label>
+<span>Transform Band Data</span>
 <br>
 <h4> Members</h4>
 <span>Current </span>
