little clean up

--- a/src/app/components/example-transform/example-transform/example-transform.component.html
+++ b/src/app/components/example-transform/example-transform/example-transform.component.html
@@ -1,13 +1,13 @@
 <div class="form-div" >
-<br>
-<h1>{{inputBandData}} </h1>
+
+<h3>Default Band Data as string</h3>
+<h2>{{inputBandData}} </h2>
 
 <button (click)="pressTransform()">Transform Band Data</button>
 </div>
 
 @if (transFormedBandData) {
-<span>Transform Band Data</span>
-<br>
+<h3>Transformed Band Data</h3>
 <h4> Members</h4>
 <span>Current </span>
 
